Use lambdas to clean up the code a bit